--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                 
                 const target = document.querySelector(this.getAttribute('href'));
                 if (target) {
-                    const headerHeight = 80; // Hauteur du header fixe
+                    const headerHeight = 100; // Hauteur du header fixe (corrigé de 80 à 100)
                     const targetPosition = target.offsetTop - headerHeight;
                     
                     window.scrollTo({
