--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         .services {
             padding: 100px 0;
             background-color: var(--bg-dark);
-            scroll-margin-top: 80px; /* Ajout pour compenser le header fixe */
+            scroll-margin-top: 100px; /* Corrigé de 80px à 100px pour correspondre au headerHeight du script */
         }
 
         .services h2 {
