Add Digital Card domain: digitalqrcard.xyz

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                             <span><i class="fas fa-check"></i> QR Code Sharing</span>
                             <span><i class="fas fa-check"></i> Easy Management</span>
                         </div>
-                        <span class="app-link coming-soon">Coming Soon</span>
+                        <a href="https://digitalqrcard.xyz/" target="_blank" class="app-link">Visit Website →</a>
                     </div>
                     <div class="service-card app-card">
                         <i class="fas fa-cloud-sun"></i>
