Update app name to Digital QR Card

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                     </div>
                     <div class="service-card app-card">
                         <i class="fas fa-id-card"></i>
-                        <h3>Digital Card</h3>
+                        <h3>Digital QR Card</h3>
                         <p>Manage and share your digital business cards effortlessly. Create professional cards with QR
                             codes and share them instantly.</p>
                         <div class="app-features">
@@ -575,7 +575,7 @@
                         <select required>
                             <option value="">Select a topic</option>
                             <option value="nearyou">Near You App</option>
-                            <option value="digitalcard">Digital Card App</option>
+                            <option value="digitalcard">Digital QR Card App</option>
                             <option value="wiseweather">Wise Weather App</option>
                             <option value="support">Technical Support</option>
                             <option value="feedback">Feedback</option>
