Update hero description text

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
         <section id="home" class="hero">
             <div class="hero-content">
                 <h1>Innovative Mobile Applications</h1>
-                <p>Discover cutting-edge apps powered by AI technology to enhance your digital life</p>
+                <p>Discover cutting-edge apps powered by AI technology to enhance social life experience</p>
                 <a href="#apps" class="cta-button">Explore Our Apps</a>
             </div>
         </section>
