Update app descriptions and features for Near You, Digital QR Card, and Wise Weather

--- a/index.html
+++ b/index.html
@@ -501,8 +501,7 @@
                     <div class="service-card app-card">
                         <i class="fas fa-camera"></i>
                         <h3>Near You</h3>
-                        <p>Find what you need by scanning any object. Discover the best places around you with
-                            AI-powered visual search.</p>
+                        <p>Find what you need by scanning any object or brands. Discover the best places around you.</p>
                         <div class="app-features">
                             <span><i class="fas fa-check"></i> AI Visual Recognition</span>
                             <span><i class="fas fa-check"></i> Location Discovery</span>
@@ -518,7 +517,7 @@
                         <div class="app-features">
                             <span><i class="fas fa-check"></i> Digital Business Cards</span>
                             <span><i class="fas fa-check"></i> QR Code Sharing</span>
-                            <span><i class="fas fa-check"></i> Easy Management</span>
+                            <span><i class="fas fa-check"></i> Easy Share</span>
                         </div>
                         <a href="https://digitalqrcard.xyz/" target="_blank" class="app-link">Visit Website →</a>
                     </div>
@@ -530,7 +529,7 @@
                         <div class="app-features">
                             <span><i class="fas fa-check"></i> Community Weather Reports</span>
                             <span><i class="fas fa-check"></i> Real-time Forecasts</span>
-                            <span><i class="fas fa-check"></i> Beta Testing Phase</span>
+                            <span><i class="fas fa-check"></i> Weather validated by Community</span>
                         </div>
                         <a href="https://wiseweatherapp.xyz/" target="_blank" class="app-link">Visit Website →</a>
                     </div>
