Update Wise Weather feature to 'Get Rain, Wind & Snow Alerts'

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                         <div class="app-features">
                             <span><i class="fas fa-check"></i> Community Weather Reports</span>
                             <span><i class="fas fa-check"></i> Real-time Forecasts</span>
-                            <span><i class="fas fa-check"></i> Weather validated by Community</span>
+                            <span><i class="fas fa-check"></i> Get Rain, Wind & Snow Alerts</span>
                         </div>
                         <a href="https://wiseweatherapp.xyz/" target="_blank" class="app-link">Visit Website →</a>
                     </div>
