--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#apps">Apps</a></li>
                 <li><a href="#download">Download</a></li>
+                <li><a href="#booking">Book a Session</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -557,6 +558,16 @@
                         <p>Access from any browser</p>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="booking" class="contact">
+            <div class="container">
+                <h2>Book a Session</h2>
+                <!-- Calendly inline widget begin -->
+                <div class="calendly-inline-widget" data-url="https://calendly.com/neousaxis/seance" style="min-width:320px;height:700px;"></div>
+                <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+                <!-- Calendly inline widget end -->
             </div>
         </section>
 
