Rebranding: Change AI Visionary to Global Workflow

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Visionary - Innovative Mobile Applications</title>
+    <title>Global Workflow - Innovative Mobile Applications</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Roboto:wght@300;400;500&display=swap"
@@ -474,7 +474,7 @@
         <nav>
             <div class="logo">
                 <i class="fas fa-brain"></i>
-                <span>AI Visionary</span>
+                <span>Global Workflow</span>
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
@@ -593,7 +593,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 AI Visionary. All rights reserved.</p>
+            <p>&copy; 2024 Global Workflow. All rights reserved.</p>
         </div>
     </footer>
 
