feat: add Custom Development section and Quote Request option

--- a/index.html
+++ b/index.html
@@ -551,6 +551,31 @@
             </div>
         </section>
 
+        <section id="custom-dev" class="services"
+            style="background: linear-gradient(135deg, rgba(0, 255, 255, 0.05), rgba(10, 10, 10, 0.95));">
+            <div class="container">
+                <h2>Custom Development</h2>
+                <div class="service-card app-card"
+                    style="max-width: 800px; margin: 0 auto; border-color: var(--accent-color);">
+                    <i class="fas fa-laptop-code" style="color: var(--accent-color);"></i>
+                    <h3 style="font-size: 2rem;">Bring Your Idea to Life</h3>
+                    <p style="font-size: 1.1rem; margin-bottom: 2rem;">
+                        Looking for a team to build your mobile application, website, or platform?
+                        We offer premium development services tailored to your needs.
+                    </p>
+                    <div class="app-features"
+                        style="flex-direction: row; justify-content: center; flex-wrap: wrap; gap: 2rem; margin-bottom: 2rem;">
+                        <span><i class="fas fa-check" style="color: var(--accent-color);"></i> Mobile Apps</span>
+                        <span><i class="fas fa-check" style="color: var(--accent-color);"></i> Web Platforms</span>
+                        <span><i class="fas fa-check" style="color: var(--accent-color);"></i> AI Integration</span>
+                    </div>
+                    <a href="#contact" class="cta-button"
+                        style="background: linear-gradient(135deg, var(--accent-color), var(--primary-color)); align-self: center;">Request
+                        a Quote</a>
+                </div>
+            </div>
+        </section>
+
         <section id="contact" class="contact">
             <div class="container">
                 <h2>Get in Touch</h2>
@@ -569,6 +594,7 @@
                             <option value="support">Technical Support</option>
                             <option value="feedback">Feedback</option>
                             <option value="partnership">Partnership</option>
+                            <option value="quote">Request a Quote</option>
                             <option value="other">Other</option>
                         </select>
                     </div>
