chore: update hero subtitle with B2B/B2C info

--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
             <div class="hero-content">
                 <h1 data-i18n="hero_title">Innovative Mobile Applications</h1>
                 <p data-i18n="hero_subtitle">Discover cutting-edge apps powered by AI technology to enhance social life
-                    experience</p>
+                    experience. We develop applications for businesses (B2B) and consumers (B2C).</p>
                 <a href="#apps" class="cta-button" data-i18n="hero_cta">Explore Our Apps</a>
             </div>
         </section>
