feat: add Nu Frequencies app card with i18n

--- a/index.html
+++ b/index.html
@@ -563,6 +563,22 @@
                         <a href="https://wiseweatherapp.xyz/" target="_blank" class="app-link"
                             data-i18n="app_ww_btn">Visit Website →</a>
                     </div>
+                    <div class="service-card app-card">
+                        <i class="fas fa-wave-square"></i>
+                        <h3 data-i18n="app_nf_title">Nu Frequencies</h3>
+                        <p data-i18n="app_nf_desc">A holistic wellness web app combining binaural beats and coherent
+                            breathing to enhance focus, relaxation, and sleep.</p>
+                        <div class="app-features">
+                            <span><i class="fas fa-check"></i> <span data-i18n="app_nf_feat1">Binaural
+                                    Beats</span></span>
+                            <span><i class="fas fa-check"></i> <span data-i18n="app_nf_feat2">Coherent
+                                    Breathing</span></span>
+                            <span><i class="fas fa-check"></i> <span data-i18n="app_nf_feat3">Focus, Relax &
+                                    Sleep</span></span>
+                        </div>
+                        <a href="https://nufrequencies.xyz/" target="_blank" class="app-link"
+                            data-i18n="app_nf_btn">Visit Website →</a>
+                    </div>
                 </div>
             </div>
         </section>
