feat: add Nu Frequencies option to contact form with i18n

--- a/index.html
+++ b/index.html
@@ -650,6 +650,7 @@
                             <option value="" data-i18n="form_topic_default">Select a topic</option>
                             <option value="digitalcard" data-i18n="form_topic_digital">Digital QR Card App</option>
                             <option value="wiseweather" data-i18n="form_topic_weather">Wise Weather App</option>
+                            <option value="nufrequencies" data-i18n="form_topic_nufreq">Nu Frequencies App</option>
                             <option value="support" data-i18n="form_topic_support">Technical Support</option>
                             <option value="feedback" data-i18n="form_topic_feedback">Feedback</option>
                             <option value="partnership" data-i18n="form_topic_partnership">Partnership</option>
