Add Moonlight app - Moon phase guide with lunar gardening features

--- a/index.html
+++ b/index.html
@@ -579,6 +579,22 @@
                         <a href="https://nufrequencies.xyz/" target="_blank" class="app-link"
                             data-i18n="app_nf_btn">Visit Website →</a>
                     </div>
+                    <div class="service-card app-card">
+                        <i class="fas fa-moon"></i>
+                        <h3 data-i18n="app_ml_title">Moonlight</h3>
+                        <p data-i18n="app_ml_desc">Your personal moon phase guide. Track full and new moon cycles,
+                            optimize your planting, and harmonize your daily life.</p>
+                        <div class="app-features">
+                            <span><i class="fas fa-check"></i> <span data-i18n="app_ml_feat1">Real-Time Phases &
+                                    Illumination</span></span>
+                            <span><i class="fas fa-check"></i> <span data-i18n="app_ml_feat2">Lunar Gardening
+                                    Guide</span></span>
+                            <span><i class="fas fa-check"></i> <span data-i18n="app_ml_feat3">Localized Seasonal
+                                    Produce</span></span>
+                        </div>
+                        <a href="https://8moonlight.xyz/" target="_blank" class="app-link" data-i18n="app_ml_btn">Visit
+                            Website →</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -651,6 +667,7 @@
                             <option value="digitalcard" data-i18n="form_topic_digital">Digital QR Card App</option>
                             <option value="wiseweather" data-i18n="form_topic_weather">Wise Weather App</option>
                             <option value="nufrequencies" data-i18n="form_topic_nufreq">Nu Frequencies App</option>
+                            <option value="moonlight" data-i18n="form_topic_moonlight">Moonlight App</option>
                             <option value="support" data-i18n="form_topic_support">Technical Support</option>
                             <option value="feedback" data-i18n="form_topic_feedback">Feedback</option>
                             <option value="partnership" data-i18n="form_topic_partnership">Partnership</option>
